# pypage

./: .replit  CHANGELOG.md  ENHANCED_FEATURES_GUIDE.md  LICENSE  MANIFEST.in  README.md  app.py  complete_feature_showcase.py  complete_feature_test.html  enhanced_features_demo.html  example_enhanced_features.py  example_v3_features.py  models.py  pyproject.toml  replit.md  setup.py  test_enhanced.html
.local/state/replit/agent/: .latest.json  progress_tracker.md
attached_assets/: Pasted--html-generator-page-py-class-Page-def-init-self-title-header-text-logo-url-None-n-1754130433262_1754130433267.txt  Pasted-1-Form-Support-Add-a-Form-class-and-basic-inputs-Form-action-method-Input-type-name-value--1754132616867_1754132616874.txt  Pasted-Absolutely-here-s-an-expanded-batch-of-component-ideas-to-help-your-library-reach-professional-1754133687704_1754133687705.txt  Pasted-Yes-there-s-still-plenty-of-room-to-expand-your-component-library-especially-if-you-want-to-s-1754133628410_1754133628415.txt  code (4)_1754131638072.html
docs/: README.md  component_reference.md  faq.md  getting-started.md  installation.md  quick-start.md  themes.md
docs/examples/: basic-website.md
docs/features/: accessibility.md  modern-ui.md  performance.md  webassembly.md
generated_pages/: .gitkeep  My_New_Page_462c1dc3.html  My_New_Page_5c737a53.html  My_New_Page_7e119ee0.html
html_generator/: README.md  __init__.py  components.py  css.py  elements.py  export_tools.py  forms.py  layout.py  page.py  templates.py
instance/: html_generator.db
pypage/: advanced_components.py  animations.py  components.py  debug_tools.py  forms_advanced.py  performance_tools.py  webassembly_integration.py
pypage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
routes/: README.md  api.py  config.py  docs.py  main.py
src/pypage/: data_visualization.py  plugins.py  ui_components.py
src/pypage.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
static/css/: custom.css
static/js/: editor.js
templates/: README.md  base.html  editor.html  examples.html  gallery.html  index.html  navbar_config.html  preview.html
templates/config/: css_builder.html
test/testing/: README.md  app.py
testing/: app.py
tools/: README.md
tools/web_interface/: README.md
